<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>test</groupId>
	<artifactId>m2e-integration-with-generic-text-editor</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
			<maven.compiler.source>17</maven.compiler.source>
			<maven.compiler.target>17</maven.compiler.target>
<!-- XML (Wild Web Developer):
	 editing improvements + formatting preferences -->
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/sun.security.util=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<includesFile>surefireIncludes.txt</includesFile>
					<classesDirectory>target/classes-gen</classesDirectory>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>